--- a/package.json
+++ b/package.json
@@ -8,15 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "lodash": "^4.17.11",
+    "marked": "^0.5.2",
     "vue": "^2.5.17",
-    "vue-class-component": "^6.3.2",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
-    "vuex-class": "^0.3.1",
-    "vuex-module-decorators": "^0.9.1"
+    "vuex-class": "^0.3.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.118",
+    "@types/marked": "^0.4.2",
     "@vue/cli-plugin-babel": "^3.2.0",
     "@vue/cli-plugin-eslint": "^3.2.0",
     "@vue/cli-plugin-typescript": "^3.2.0",
