--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vue": "^2.5.17",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
+    "vue-tsx-helper": "^0.1.3",
     "vuex": "^3.0.1",
     "vuex-class": "^0.3.1"
   },
