--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "deepstream.io-client-js": "^2.3.0",
     "lodash": "^4.17.11",
     "marked": "^0.5.2",
     "vue": "^2.5.17",
